BEV-718 Tests rewritten to use TestContainers. All tests can run as part of build